# UDPSocket

./: CMakeCache.txt  CMakeLists.txt  CMakePresets.json  Jenkinsfile  Makefile  arm-aarch64.cmake  cmake_install.cmake
client/include/: protocol.h
client/src/: main.cpp
server/include/: util.h
server/src/: main.cpp  util.cpp
server/test/: tests.cpp
